--- a/src/components/layout/calender/calender.styles.scss
+++ b/src/components/layout/calender/calender.styles.scss
@@ -1,15 +1,23 @@
+.calender-container{
+    width: 80%;
+}
 
 .calender{
     text-align: center;
     margin: 1rem;
     filter: drop-shadow(30px 10px 4px black);
+    table-layout: fixed;
 
     #calender-headers{
         border-bottom: 2px solid white;
+    }
 
-        .calender-header{
-            width: 50px !important;
-        }
+    .calender-header-item{
+        width: 15%;
+        min-width: 65px;
+    }
+    .calender-header-item:nth-of-type(1){
+        width: 10%;
     }
     
     #time-col{
@@ -27,6 +35,7 @@
             left: 0;
             top: 0;
             border: none;
+            cursor: pointer;
         }
 
         .cell-button:hover{
